--- a/src/styl/type.styl
+++ b/src/styl/type.styl
@@ -1,10 +1,11 @@
 // Typography
+@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
 
 // Fonts
-$font-sans = 'Khula-Regular',Arial,Helvetica,sans-serif
-$font-sans-light = 'Khula-Light',Arial,Helvetica,sans-serif
-$font-sans-bold = "Khula-Bold", Arial, sans-serif
-$font-serif = Georgia,serif
+$font-sans = "Fjalla One","Helvetica Neue",Helvetica,Arial,sans-serif
+$font-sans-light = "Fjalla One","Helvetica Neue",Helvetica,Arial,sans-serif
+$font-sans-bold = "Fjalla One","Helvetica Neue",Helvetica,Arial,sans-serif
+$font-serif = Georgia,"Times New Roman",Times,serif
 $primary-font-family = $font-sans
 $secondary-font-family = $font-serif
 $monospaced-font-family = Monaco, Lucida Console, monspace
