--- a/src/styl/type.styl
+++ b/src/styl/type.styl
@@ -1,13 +1,11 @@
 // Typography
-@import url(https://fonts.googleapis.com/css?family=Fjalla+One);
+@import url('http://fonts.googleapis.com/css?family=Fjalla+One|Roboto');
 
 // Fonts
-$font-sans = "Fjalla One","Helvetica Neue",Helvetica,Arial,sans-serif
-$font-sans-light = "Fjalla One","Helvetica Neue",Helvetica,Arial,sans-serif
-$font-sans-bold = "Fjalla One","Helvetica Neue",Helvetica,Arial,sans-serif
-$font-serif = Georgia,"Times New Roman",Times,serif
+$font-sans = 'Roboto',sans-serif
+$font-sans-light = 'Roboto',sans-serif
+$font-sans-bold = 'Roboto',sans-serif
+$font-serif = Georgia,'Times New Roman',Times,serif
 $primary-font-family = $font-sans
 $secondary-font-family = $font-serif
 $monospaced-font-family = Monaco, Lucida Console, monspace
-
-
