--- a/src/styl/type.styl
+++ b/src/styl/type.styl
@@ -1,10 +1,9 @@
 // Typography
-@import url('http://fonts.googleapis.com/css?family=Fjalla+One|Roboto');
 
 // Fonts
-$font-sans = 'Roboto',sans-serif
-$font-sans-light = 'Roboto',sans-serif
-$font-sans-bold = 'Roboto',sans-serif
+$font-sans = 'Open Sans', sans-serif
+$font-sans-light = 'Open Sans Light', sans-serif
+$font-sans-bold = 'Open Sans Bold', sans-serif
 $font-serif = Georgia,'Times New Roman',Times,serif
 $primary-font-family = $font-sans
 $secondary-font-family = $font-serif
