colors and layout

--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -1,9 +1,9 @@
 // Colors
 
-$color-bg = #fff
-$color-body-text = #666
-$color-chart-gridline = #ddd
-$color-chart-meta = #CCCCCC
+$color-bg = #ccc
+$color-body-text = #000
+$color-chart-gridline = #555
+$color-chart-meta = #fff
 $color-chart-axis-text = #666
 $color-chart-title-text = #333
 $color-chart-zeroline = #333
@@ -15,14 +15,14 @@ $color-editor-text = #333333
 $color-editor-placeholder = #CACACA
 
 $chart-colors = \
-	#a50026 \
-	#fdae61 \
-	#d73027 \
-	#abd9e9 \
-	#f46d43 \
-	#74add1 \
-	#4575b4 \
-	#313695 \
+	#1abc9c \
+	#16a085 \
+	#f1c40f \
+	#f39c12 \
+	#3498db \
+	#2980b9 \
+	#e74c3c \
+	#c0392b \
 	#999 \
 	#666 \
 	#ccc
