--- a/src/styl/layout.styl
+++ b/src/styl/layout.styl
@@ -117,6 +117,7 @@ canvas
 		margin 0
 		line-height 1
 		padding 0
+		font-family $font-sans-bold
 
 .chartbuilder-container
 	margin-top $header-height + 0.75
