adds subtext styling

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -138,6 +138,10 @@ svg
       text-anchor start
     &.right
       text-anchor end
+  &.svg-text-sub // Customize title text
+    fill $color-chart-axis-text
+    font-family $font-sans
+    font-size $em_size
   &.svg-text-title // Customize title text
     fill $color-body-text
     font-family $font-sans-bold
