fix sub/title comment error

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -138,7 +138,7 @@ svg
       text-anchor start
     &.right
       text-anchor end
-  &.svg-text-sub // Customize title text
+  &.svg-text-sub // Customize sub text
     fill $color-chart-axis-text
     font-family $font-sans
     font-size $em_size
