add a color for a total of 12

--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -23,9 +23,11 @@ $chart-colors = \
 	#2980b9 \
 	#e74c3c \
 	#c0392b \
+	#000 \
 	#999 \
 	#666 \
-	#ccc
+	#fff
+		
 
 for c, i in $chart-colors
 	[data-color-index=\"{i}\"]
