change color palette

--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -1,12 +1,12 @@
 // Colors
 
-$color-bg = #ccc
+$color-bg = #fff
 $color-body-text = #000
 $color-chart-gridline = #555
-$color-chart-meta = #fff
-$color-chart-axis-text = #666
+$color-chart-meta = #666
+$color-chart-axis-text = #333
 $color-chart-title-text = #333
-$color-chart-zeroline = #333
+$color-chart-zeroline = #000
 
 $color-editor-border = #e2e2e2
 $color-editor-fill = #F1F1F1
@@ -15,14 +15,14 @@ $color-editor-text = #333333
 $color-editor-placeholder = #CACACA
 
 $chart-colors = \
-	#1abc9c \
-	#16a085 \
-	#f1c40f \
-	#f39c12 \
-	#3498db \
-	#2980b9 \
-	#e74c3c \
-	#c0392b \
+	#529dba \
+	#005e7f \
+	#c4161c \
+	#9e0b0f \
+	#00adad\
+	#007c7c \
+	#f58229 \
+	#dc661e \
 	#000 \
 	#999 \
 	#666 \
