--- a/src/styl/type.styl
+++ b/src/styl/type.styl
@@ -1,10 +1,10 @@
 // Typography
 
 // Fonts
-$font-sans = 'Open Sans', sans-serif
-$font-sans-light = 'Open Sans Light', sans-serif
-$font-sans-bold = 'Open Sans Bold', sans-serif
-$font-serif = Georgia,'Times New Roman',Times,serif
+$font-sans = 'Benton Sans Condensed', sans-serif
+$font-sans-light = 'Benton Sans Condensed Light', sans-serif
+$font-sans-bold = 'Benton Sans Condensed Bold', sans-serif
+$font-serif = Georgia,'Times New Roman',Times, serif
 $primary-font-family = $font-sans
 $secondary-font-family = $font-serif
 $monospaced-font-family = Monaco, Lucida Console, monspace
