--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -1,5 +1,6 @@
 $em_size = 20px
 $em_size_small = 14px
+$em_size_medium = 16px
 $em_size_large = 36px
 
 div.renderer-wrapper
@@ -37,6 +38,7 @@ svg
     .title
       font-family $font-sans
       fill $color-chart-axis-text
+      font-size $em_size_medium
     .tick
       font-family $font-sans
       &[data-anchor="middle"]
