--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -1,7 +1,7 @@
 $em_size = 20px
 $em_size_small = 14px
 $em_size_medium = 16px
-$em_size_large = 36px
+$em_size_large = 24px
 
 div.renderer-wrapper
   font-smoothing antialiased
@@ -192,7 +192,8 @@ svg
     &.svg-text-source
       font-size $em_size*0.6
     &.svg-text-title
-      font-size $em_size
+      font-size $em_size_large
+      font-weight bold
 
 .small
   .em-size
