made colors more distinguishable

--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -15,14 +15,14 @@ $color-editor-text = #333333
 $color-editor-placeholder = #CACACA
 
 $chart-colors = \
-	#529dba \
 	#005e7f \
-	#c4161c \
+	#9ccde4 \
 	#9e0b0f \
-	#00adad\
+	#df897c \
 	#007c7c \
-	#f58229 \
+	#78cdd1\
 	#dc661e \
+	#fcbc7e \
 	#000 \
 	#999 \
 	#666 \
