made bar chart label font size smaller

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -83,6 +83,7 @@ svg
     font-family $font-sans
     text
       fill $color-chart-axis-text
+      font-size $em_size_small
     rect
       fill $color-bg
 
