trial - gives different static sizes different svg class names
to style charts for different static sizes

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -248,3 +248,11 @@ svg
 
 .cb-credit-logo
   fill $color-chart-meta
+
+
+// Size specific customizations for static charts
+
+svg
+  &.print_two
+    .svg-label-text
+      font-size 8pt
