fixed bar chart styling for diff. sizes

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -236,6 +236,8 @@ svg
             stroke-width 3px
             stroke-linecap round
             stroke-linejoin round
+      .concealer-label text
+        font-size $em_size_online*1.2
     .svg-text
       font-size $em_size_online*1.2
       &.svg-text-credit
@@ -266,12 +268,16 @@ svg
         line.no-label-tick
           stroke-width 1px
       .margins
+        .label
+          font-size $em_size_online*1.6
         .line, .other-line
           path
             fill none
             stroke-width 2px
             stroke-linecap round
             stroke-linejoin round
+      .concealer-label text
+        font-size $em_size_online*1.2
     .svg-text
       font-size $em_size_online*1.2
       &.svg-text-credit
