changed cursor appearance for labels

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -170,7 +170,7 @@ svg
   font-size $em_size*1.25
   font-family $font-sans
   font-weight bold
-  cursor move
+  // cursor move
 
 .crosshair
   line
