changed circle size & stroke color

--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -36,8 +36,8 @@ for c, i in $chart-colors
 		rect
 			fill (c)
 		circle
-			stroke (c)
-			stroke-width 2px
+			stroke #fff
+			stroke-width 1px
 			fill (c)
 
 	.color-index-{i}
