axis label color = axis tick color

--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -52,6 +52,9 @@ for c, i in $chart-colors
 	.d4 .axis .tick text[data-color-index=\"{i}\"]
 		fill (c)
 
+	.d4 .axis .title text[data-color-index=\"{i}\"]
+		fill (c)
+
 	.cb-colorpicker-color-{i}
 		background-color (c)
 
