online styling - changed font sizes

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -1,7 +1,6 @@
 //default settings: what svg export will grab
 
 $em_size = 8px
-$em_size_online_half = 12px
 $em_size_online = 10px
 $em_size_large = 24px
 
@@ -218,15 +217,15 @@ svg
         font-size $em_size*1.25
   &.online_full
     .svg-label-text
-      font-size $em_size_online*1.6s
+      font-size $em_size_online*1.5
     .d4
       .axis
         .title
-          font-size $em_size_online*1.6
-          font-weight normal
+          font-size $em_size_online*1.8
+          font-weight bold
         .tick
           text
-            font-size $em_size_online*1.2   
+            font-size $em_size_online*1.5   
           line
             fill none
             stroke $color-chart-gridline
@@ -247,29 +246,29 @@ svg
             stroke-linecap round
             stroke-linejoin round
       .concealer-label text
-        font-size $em_size_online*1.2
+        font-size $em_size_online*1.5
     .svg-text
-      font-size $em_size_online*1.2
+      font-size $em_size_online*1.5
       &.svg-text-credit
         font-size $em_size_online
       &.svg-text-source
         font-size $em_size_online
       &.svg-text-title
-        font-size $em_size_online*2.4
+        font-size $em_size_online*2.8
         font-weight bold
       &.svg-text-sub
-        font-size $em_size_online*1.6
+        font-size $em_size_online*1.8
   &.online_half, &.online_vertical
     .svg-label-text
-      font-size $em_size_online*1.6s
+      font-size $em_size_online*1.5
     .d4
       .axis
         .title
-          font-size $em_size_online*1.6
-          font-weight normal
+          font-size $em_size_online*1.8
+          font-weight bold
         .tick
           text
-            font-size $em_size_online*1.2   
+            font-size $em_size_online*1.5   
           line
             fill none
             stroke $color-chart-gridline
@@ -290,15 +289,15 @@ svg
             stroke-linecap round
             stroke-linejoin round
       .concealer-label text
-        font-size $em_size_online*1.2
+        font-size $em_size_online*1.5
     .svg-text
-      font-size $em_size_online*1.2
+      font-size $em_size_online*1.5
       &.svg-text-credit
         font-size $em_size_online
       &.svg-text-source
         font-size $em_size_online
       &.svg-text-title
-        font-size $em_size_online*2.4
+        font-size $em_size_online*2.8
         font-weight bold
       &.svg-text-sub
-        font-size $em_size_online*1.6
+        font-size $em_size_online*1.8
