--- a/src/styl/type.styl
+++ b/src/styl/type.styl
@@ -2,7 +2,7 @@
 
 // Fonts
 $font-sans = 'Benton Sans Condensed', sans-serif
-$font-sans-light = 'Benton Sans Condensed Light', sans-serif
+$font-sans-light = 'Benton Sans Condensed', sans-serif
 $font-sans-bold = 'Benton Sans Condensed', sans-serif
 $font-serif = Georgia,'Times New Roman',Times, serif
 $primary-font-family = $font-sans
