--- a/src/styl/colors.styl
+++ b/src/styl/colors.styl
@@ -1,12 +1,12 @@
 // Colors
 
-$color-bg = #fff
-$color-body-text = #000
-$color-chart-gridline = #808285
-$color-chart-meta = #666
-$color-chart-axis-text = #000
-$color-chart-title-text = #000
-$color-chart-zeroline = #808285
+$color-bg = #ffffff
+$color-body-text = #000000
+$color-chart-gridline = #000000
+$color-chart-meta = #000000
+$color-chart-axis-text = #000000
+$color-chart-title-text = #000000
+$color-chart-zeroline = #000000
 
 $color-editor-border = #e2e2e2
 $color-editor-fill = #F1F1F1
