corrected print svg styles

--- a/src/styl/chart-renderer.styl
+++ b/src/styl/chart-renderer.styl
@@ -36,6 +36,8 @@ svg
   font-size $em_size_print
   .leftAxis path.domain
     display none
+  .rightAxis path.domain
+    display none
   .xAxis path.domain
     display none
   .axis
@@ -92,7 +94,6 @@ svg
 
   .xAxislabel
     fill $color-chart-axis-text
->>>>>>> origin/master
   .concealer-label
     font-family $font-sans
     text
